Edit Avatar and reward template + fixed alignment issue

--- a/client/src/views/Profile/prof.css
+++ b/client/src/views/Profile/prof.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: atma;
+    src: url(../../assets/Atma-Medium.ttf);
+  }
 .cont
 {
     display: flex;
@@ -22,7 +26,7 @@
     font-size: 58px;
     margin-bottom: 1%;
     letter-spacing: 0.05em;
-    font-family: Georgia, Times, 'Times New Roman', serif;
+    font-family: atma;
 }
 .username
 {
@@ -31,7 +35,7 @@
     font-size: 38px;
     margin-top: 5%;
     letter-spacing: 0.05em;
-    font-family: Georgia, Times, 'Times New Roman', serif;
+    font-family: atma;
 }
 .subheadig
 {
@@ -40,7 +44,7 @@
     font-size: 30px;
     margin-top: 5%;
     letter-spacing: 0.05em;
-    font-family: Georgia, Times, 'Times New Roman', serif;
+    font-family: atma;
 }
 .desc
 {
@@ -71,9 +75,15 @@
     border: none;
     font-size: 20px;
     margin-left: 25%;
+    margin-bottom: 2%;
+    padding-left: 14px;
+    text-align: center;
+    text-decoration: none;
 }
 .editbtn:hover{
     font-weight: bolder;
+    text-decoration: none;
+    color: white;
 }
 .col2
 {
